--- a/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/WebContent/WEB-INF/commandHandlerURI.properties
@@ -1,3 +1,5 @@
 # path=handler mapping
 /join.do = member.command.JoinHandler
 /login.do = auth.command.LoginHandler
+/logout.do = auth.command.LogoutHandler
+/changePwd.do = member.command.ChangePasswordHandler
