--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,9 @@
   <listener>
     <listener-class>jdbc.DBCPInitListener</listener-class>
   </listener>
+  <listener>
+  	<listener-class>util.AddContextPathListener</listener-class>
+  </listener>
   <context-param>
     <param-name>poolConfig</param-name>
     <param-value>
@@ -40,6 +43,7 @@
   <filter-mapping>
     <filter-name>LoginCheckFilter</filter-name>
     <url-pattern>/changePwd.do</url-pattern>
+    <url-pattern>/article/write.do</url-pattern>
   </filter-mapping>
   <servlet>
     <servlet-name>ControllerUsingURI</servlet-name>
