--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -45,15 +45,17 @@
     <url-pattern>/changePwd.do</url-pattern>
     <url-pattern>/article/write.do</url-pattern>
     <url-pattern>/article/modify.do</url-pattern>
+    <url-pattern>/article/delete.do</url-pattern>
   </filter-mapping>
   <servlet>
     <servlet-name>ControllerUsingURI</servlet-name>
-    <servlet-class>mvc.controller.ControllerUsingURI</servlet-class>
+    <servlet-class>mvc.controller.ControllerUsingURI</servlet-class>    
     <init-param>
       <param-name>configFile</param-name>
       <param-value>/WEB-INF/commandHandlerURI.properties</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
+    <multipart-config></multipart-config>
   </servlet>
   <servlet-mapping>
     <servlet-name>ControllerUsingURI</servlet-name>
